--- a/src/app/pages/perfil/perfil.component.css
+++ b/src/app/pages/perfil/perfil.component.css
@@ -1,19 +1,13 @@
-.form {
-    margin-left: 20;
-    margin-right: 20;
-    vertical-align: center;
-    font-size: 18;
-}
-
 .card {
     background-color: #ffffff;
     margin: 5 10 5 10;
     border-radius: 7;
+    padding: 0 20 0 20;
+    vertical-align: center;
 }
 
 .img-profile {
-    margin-top: 40;
-    margin-bottom: 40;
+    margin: 20 0 20 0;
     height: 150;
     width: 150;
     vertical-align: center;
@@ -30,22 +24,40 @@
 .txt-version {
     text-align: center;
     font-size: 11;
-    margin: 0 20 5 20;
+    margin-bottom: 10;
 }
 
 .txt-usuario {
+    font-size: 16;
+    color: #222731;
+}
+
+.txt-perfil {
     font-size: 15;
+    opacity: 0.7;
+    color: #2d3440;
+}
+
+.icon-perfil {
+    opacity: 0.9;
+    color: #2d3440;
+    text-align: center;
 }
 
 .avatar {
     color: white;
     font-size: 85;
     text-align: center;
-    background-color: #222731;
+    background-color: #2d3440;
     padding-top: 10%;
     padding-bottom: 10%;
 }
 
-Button {
+.btn-sec {
+    font-size: 14;
+    font-weight: bold;
+    color: #ef424c;
     width: 40%;
+    padding: 1;
+    margin: 5;
 }
