--- a/src/app/pages/productos/producto-detalle/producto.component.html
+++ b/src/app/pages/productos/producto-detalle/producto.component.html
@@ -37,41 +37,41 @@
 
                 </StackLayout>
 
-                <StackLayout row="2" *ngIf="rotulos">
+                <StackLayout [formGroup]="cotizar1Form" row="2" *ngIf="rotulos">
                     <StackLayout class="m-b-10">
-                        <Label text="Altura" class="m-b-5" [ngClass]="{invalid:!alturaCtrl.valid && alturaCtrl.touched}"></Label>
-                        <TextField hint="Altura(metro)" class="inputVariables" keyboardType="number" returnKeyType="next" required ngModel #alturaCtrl="ngModel"></TextField>
-                        <Label text="Igresar la altura" class="h6 invalid" *ngIf="!alturaCtrl.valid && alturaCtrl.touched"></Label>
+                        <Label text="Altura*" class="m-b-5" [ngClass]="{invalid:cotizar1Form.controls['altura'].errors?.required || cotizar1Form.controls['altura'].errors?.pattern }"></Label>
+                        <TextField hint="Altura(metro)" class="inputVariables" keyboardType="number" returnKeyType="next" formControlName="altura"></TextField>
+                        <Label class="p-l-10 invalid h6" text="Ingrese solo números" *ngIf="cotizar1Form.controls['altura'].errors?.pattern"></Label>
                     </StackLayout>
 
                     <StackLayout class="m-b-10">
-                        <Label text="Ancho" class="m-b-5" [ngClass]="{invalid:!anchoCtrl.valid && anchoCtrl.touched}"></Label>
-                        <TextField hint="Ancho(metro)" class="inputVariables" keyboardType="number" returnKeyType="done" required ngModel #anchoCtrl="ngModel"></TextField>
-                        <Label text="Igresar el ancho" class="h6 invalid" *ngIf="!anchoCtrl.valid && anchoCtrl.touched"></Label>
+                        <Label text="Ancho*" class="m-b-5" [ngClass]="{invalid:cotizar1Form.controls['ancho'].errors?.required || cotizar1Form.controls['ancho'].errors?.pattern }"></Label>
+                        <TextField hint="Ancho(metro)" class="inputVariables" keyboardType="number" returnKeyType="done" formControlName="ancho"></TextField>
+                        <Label class="p-l-10 invalid h6" text="Ingrese solo números" *ngIf="cotizar1Form.controls['ancho'].errors?.pattern"></Label>
                     </StackLayout>
 
-                    <Button text="Calcular" (tap)="variarPrecioRotulo(alturaCtrl.value, anchoCtrl.value)" [isEnabled]="alturaCtrl.valid && anchoCtrl.valid" class="btn-primary btn-active"></Button>
+                    <Button text="Calcular" (tap)="variarPrecioRotulo(cotizar1Form.controls['altura'].value, cotizar1Form.controls['ancho'].value)" [isEnabled]="cotizar1Form.valid" class="btn-primary btn-active"></Button>
 
                 </StackLayout>
 
-                <StackLayout row="2" *ngIf="rotulos3D">
+                <StackLayout [formGroup]="cotizar2Form" row="2" *ngIf="rotulos3D">
                     <StackLayout class="m-b-10">
-                        <Label class="m-b-5" text="Altura" [ngClass]="{invalid:!alturaCtrl.valid && alturaCtrl.touched}"></Label>
-                        <TextField hint="Altura(metro)" class="inputVariables" keyboardType="number" returnKeyType="next" required ngModel #alturaCtrl="ngModel"></TextField>
-                        <Label text="Igresar la altura" class="h6 invalid" *ngIf="!alturaCtrl.valid && alturaCtrl.touched"></Label>
+                        <Label class="m-b-5" text="Altura*" [ngClass]="{invalid:cotizar2Form.controls['altura'].errors?.required || cotizar2Form.controls['altura'].errors?.pattern }"></Label>
+                        <TextField hint="Altura(metro)" class="inputVariables" keyboardType="number" returnKeyType="next" formControlName="altura"></TextField>
+                        <Label class="p-l-10 invalid h6" text="Ingrese solo números" *ngIf="cotizar2Form.controls['altura'].errors?.pattern"></Label>
                     </StackLayout>
                     <StackLayout class="m-b-10">
-                        <Label class="m-b-5" text="Ancho" [ngClass]="{invalid:!anchoCtrl.valid && anchoCtrl.touched}"></Label>
-                        <TextField hint="Ancho(metro)" class="inputVariables" keyboardType="number" returnKeyType="next" required ngModel #anchoCtrl="ngModel"></TextField>
-                        <Label text="Igresar el ancho" class="h6 invalid" *ngIf="!anchoCtrl.valid && anchoCtrl.touched"></Label>
+                        <Label class="m-b-5" text="Ancho*" [ngClass]="{invalid:cotizar2Form.controls['ancho'].errors?.required || cotizar2Form.controls['ancho'].errors?.pattern }"></Label>
+                        <TextField hint="Ancho(metro)" class="inputVariables" keyboardType="number" returnKeyType="next" formControlName="ancho"></TextField>
+                        <Label class="p-l-10 invalid h6" text="Ingrese solo números" *ngIf="cotizar2Form.controls['ancho'].errors?.pattern"></Label>
                     </StackLayout>
                     <StackLayout class="m-b-10">
-                        <Label class="m-b-5" text="Número de letras" [ngClass]="{invalid:!nLetrasCtrl.valid && nLetrasCtrl.touched}"></Label>
-                        <TextField hint="Letras" class="inputVariables" keyboardType="number" returnKeyType="done" required ngModel #nLetrasCtrl="ngModel"></TextField>
-                        <Label text="Igresar el ancho" class="h6 invalid" *ngIf="!nLetrasCtrl.valid && nLetrasCtrl.touched"></Label>
+                        <Label class="m-b-5" text="Número de letras*" [ngClass]="{invalid:cotizar2Form.controls['letras'].errors?.required || cotizar2Form.controls['letras'].errors?.pattern }"></Label>
+                        <TextField hint="Letras" class="inputVariables" keyboardType="number" returnKeyType="done" formControlName="letras"></TextField>
+                        <Label class="p-l-10 invalid h6" text="Ingrese solo números" *ngIf="cotizar2Form.controls['letras'].errors?.pattern"></Label>
                     </StackLayout>
 
-                    <Button text="Calcular" (tap)="variarPrecioRotulo3D(alturaCtrl.value, anchoCtrl.value, nLetrasCtrl.value)" [isEnabled]="alturaCtrl.valid && anchoCtrl.valid && nLetrasCtrl.valid" class="btn-primary btn-active"></Button>
+                    <Button text="Calcular" (tap)="variarPrecioRotulo3D(cotizar2Form.controls['altura'].value, cotizar2Form.controls['ancho'].value, cotizar2Form.controls['letras'].value)" [isEnabled]="cotizar2Form.valid" class="btn-primary btn-active"></Button>
 
                 </StackLayout>
 
