--- a/src/app/pages/productos/productos.component.css
+++ b/src/app/pages/productos/productos.component.css
@@ -38,7 +38,7 @@
     }
     
     .input-cantidad {
-        font-size: 28;
+        font-size: 24s;
         margin: 5 5 5 5;
         text-align: center;
     }
