--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -33,7 +33,7 @@
 
                 <GridLayout class="card elevation" androidElevation="4" [nsRouterLink]="['/producto', producto._id]" pageTransition="slide">
 
-                    <Image class="img-rounded" [src]="producto.img | imagen:'producto'" loadMode="async"></Image>
+                    <Image class="img-rounded" [src]="producto.img | imagen:'producto'" loadMode="async" stretch="aspectFit"></Image>
 
                     <StackLayout class="card-layout-description">
                         <Label class="label-title p-y-5" [text]="producto.nombre" textWrap="true"></Label>
