--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,50 +1,53 @@
 <FlexboxLayout class="page">
 
-    <StackLayout [formGroup]="registroForm" class="card elevation" androidElevation="4">
-        <Image class="logo" src="res://icon"></Image>
-        <Label class="header" text="Se Cliente de Digital Ads"></Label>
-        <Label class="text-sub m-b-15" text="Ingresa los siguientes datos"></Label>
-        <ScrollView height="260">
-            <StackLayout class="m-x-10">
+    <MDCardView elevation="4">
+        <StackLayout [formGroup]="registroForm" class="card">
+            <Image class="logo" src="res://icon"></Image>
+            <Label class="header" text="Se Cliente de Digital Ads"></Label>
+            <Label class="text-sub m-b-15" text="Ingresa los siguientes datos"></Label>
+            <ScrollView height="260">
+                <StackLayout class="m-x-10">
 
-                <GridLayout rows="*, *" columns="auto, *" class="m-b-10" [ngClass]="{invalid:registroForm.controls['nombre'].errors?.minlength}">
-                    <Label [text]="iconNombre" row="0" col="0" class="ico icon-signup"></Label>
-                    <TextField [isEnabled]="!_usuarioService.processing" row="0" col="1" hint="Nombre y Apellido" autocorrect="true" formControlName="nombre" returnKeyType="next" required></TextField>
-                    <Label row="1" col="1" text="Por lo menos tres caracteres" class="p-l-10 invalid h6" *ngIf="registroForm.controls['nombre'].errors?.minlength"></Label>
-                </GridLayout>
+                    <GridLayout rows="*, *" columns="auto, *" class="m-b-10" [ngClass]="{invalid:registroForm.controls['nombre'].errors?.minlength}">
+                        <Label [text]="iconNombre" row="0" col="0" class="ico icon-signup"></Label>
+                        <TextField [isEnabled]="!_usuarioService.processing" row="0" col="1" hint="Nombre y Apellido" autocorrect="true" formControlName="nombre" returnKeyType="next" required></TextField>
+                        <Label row="1" col="1" text="Por lo menos tres caracteres" class="p-l-10 invalid h6" *ngIf="registroForm.controls['nombre'].errors?.minlength"></Label>
+                    </GridLayout>
 
-                <GridLayout rows="*, *" columns="auto, *" class="m-b-10" [ngClass]="{invalid:registroForm.controls['email'].errors?.email}">
-                    <Label [text]="iconEmail" row="0" col="0" class="ico icon-signup"></Label>
-                    <TextField [isEnabled]="!_usuarioService.processing" row="0" col="1" hint="Correo Electrónico" keyboardType="email" returnKeyType="next" autocorrect="false" autocapitalizationType="none" formControlName="email"></TextField>
-                    <Label row="1" col="1" class="p-l-10 invalid h6" text="No es un e-mail válido" *ngIf="registroForm.controls['email'].errors?.email"></Label>
-                </GridLayout>
+                    <GridLayout rows="*, *" columns="auto, *" class="m-b-10" [ngClass]="{invalid:registroForm.controls['email'].errors?.email}">
+                        <Label [text]="iconEmail" row="0" col="0" class="ico icon-signup"></Label>
+                        <TextField [isEnabled]="!_usuarioService.processing" row="0" col="1" hint="Correo Electrónico" keyboardType="email" returnKeyType="next" autocorrect="false" autocapitalizationType="none" formControlName="email"></TextField>
+                        <Label row="1" col="1" class="p-l-10 invalid h6" text="No es un e-mail válido" *ngIf="registroForm.controls['email'].errors?.email"></Label>
+                    </GridLayout>
 
-                <GridLayout rows="*,*,*" columns="auto, *" class="m-b-10" [ngClass]="{invalid:registroForm.controls['telefono'].errors?.minlength || registroForm.controls['telefono'].errors?.maxlength}">
-                    <Label [text]="iconTelefono" row="0" col="0" class="ico icon-signup"></Label>
-                    <TextField [isEnabled]="!_usuarioService.processing" row="0" col="1" hint="Número telefónico" maxLength="10" keyboardType="number" returnKeyType="next" formControlName="telefono"></TextField>
-                    <Label row="1" col="1" class="p-l-10 invalid h6" text="No es un número válido" *ngIf="registroForm.controls['telefono'].errors?.minlength || registroForm.controls['telefono'].errors?.maxlength"></Label>
-                    <Label row="2" col="1" class="p-l-10 invalid h6" text="Ingrese solo números" *ngIf="registroForm.controls['telefono'].errors?.pattern || registroForm.controls['telefono'].errors?.maxlength"></Label>
-                </GridLayout>
+                    <GridLayout rows="*,*,*" columns="auto, *" class="m-b-10" [ngClass]="{invalid:registroForm.controls['telefono'].errors?.minlength || registroForm.controls['telefono'].errors?.maxlength}">
+                        <Label [text]="iconTelefono" row="0" col="0" class="ico icon-signup"></Label>
+                        <TextField [isEnabled]="!_usuarioService.processing" row="0" col="1" hint="Número telefónico" maxLength="10" keyboardType="number" returnKeyType="next" formControlName="telefono"></TextField>
+                        <Label row="1" col="1" class="p-l-10 invalid h6" text="No es un número válido" *ngIf="registroForm.controls['telefono'].errors?.minlength || registroForm.controls['telefono'].errors?.maxlength"></Label>
+                        <Label row="2" col="1" class="p-l-10 invalid h6" text="Ingrese solo números" *ngIf="registroForm.controls['telefono'].errors?.pattern || registroForm.controls['telefono'].errors?.maxlength"></Label>
+                    </GridLayout>
 
-                <GridLayout rows="*, *" columns="auto, *" class="m-b-10" [ngClass]="{invalid:registroForm.controls['password'].errors?.minlength}">
-                    <Label [text]="iconPassword" row="0" col="0" class="ico icon-signup"></Label>
-                    <TextField [isEnabled]="!_usuarioService.processing" row="0" col="1" hint="Contraseña" secure="true" returnKeyType="next" formControlName="password"></TextField>
-                    <Label row="1" col="1" class="p-l-10 invalid h6" text="Por lo menos 6 caracteres" *ngIf="registroForm.controls['password'].errors?.minlength"></Label>
-                </GridLayout>
+                    <GridLayout rows="*, *" columns="auto, *" class="m-b-10" [ngClass]="{invalid:registroForm.controls['password'].errors?.minlength}">
+                        <Label [text]="iconPassword" row="0" col="0" class="ico icon-signup"></Label>
+                        <TextField [isEnabled]="!_usuarioService.processing" row="0" col="1" hint="Contraseña" secure="true" returnKeyType="next" formControlName="password"></TextField>
+                        <Label row="1" col="1" class="p-l-10 invalid h6" text="Por lo menos 6 caracteres" *ngIf="registroForm.controls['password'].errors?.minlength"></Label>
+                    </GridLayout>
 
-                <GridLayout rows="*, *" columns="auto, *" [ngClass]="{invalid:registroForm.errors?.sonIguales && !registroForm.pristine}">
-                    <Label [text]="iconPassword2" row="0" col="0" class="ico icon-signup"></Label>
-                    <TextField [isEnabled]="!_usuarioService.processing" row="0" col="1" hint="Confirmar Contraseña" secure="true" returnKeyType="done" formControlName="password2"></TextField>
-                    <Label row="1" col="1" class="p-l-10 invalid h6" text="Las contraseñas no coinciden" *ngIf="registroForm.errors?.sonIguales && !registroForm.pristine"></Label>
-                </GridLayout>
+                    <GridLayout rows="*, *" columns="auto, *" [ngClass]="{invalid:registroForm.errors?.sonIguales && !registroForm.pristine}">
+                        <Label [text]="iconPassword2" row="0" col="0" class="ico icon-signup"></Label>
+                        <TextField [isEnabled]="!_usuarioService.processing" row="0" col="1" hint="Confirmar Contraseña" secure="true" returnKeyType="done" formControlName="password2"></TextField>
+                        <Label row="1" col="1" class="p-l-10 invalid h6" text="Las contraseñas no coinciden" *ngIf="registroForm.errors?.sonIguales && !registroForm.pristine"></Label>
+                    </GridLayout>
 
-            </StackLayout>
-        </ScrollView>
+                </StackLayout>
+            </ScrollView>
 
-        <Button [isEnabled]="registroForm.valid && !_usuarioService.processing" text="Registrar cuenta" class="btn btn-primary btn-active" (tap)="signup()"></Button>
-        <Button [isEnabled]="!_usuarioService.processing" text="¿Yá tienes una Cuenta? Regresar" (tap)="regresarLogin()" class="btn btn-flat btn-active btn-small btn-sec"></Button>
+            <Button [isEnabled]="registroForm.valid && !_usuarioService.processing" text="Registrar cuenta" class="btn btn-primary btn-active" (tap)="signup()"></Button>
+            <Button [isEnabled]="!_usuarioService.processing" text="¿Yá tienes una Cuenta? Regresar" (tap)="regresarLogin()" class="btn btn-flat btn-active btn-small btn-sec"></Button>
 
-    </StackLayout>
+        </StackLayout>
+    </MDCardView>
+
 </FlexboxLayout>
 
 <ActivityIndicator class="activity-indicator" [busy]="_usuarioService.processing" [visibility]="_usuarioService.processing ? 'visible' : 'collapse'" row="1" horizontalAlignment="center" verticalAlignment="center"></ActivityIndicator>
