--- a/src/app/pages/productos/productos.component.css
+++ b/src/app/pages/productos/productos.component.css
@@ -5,8 +5,8 @@
     }
     
     .card-layout-description {
-        background-color: rgba(255, 255, 255, 0.555);
-        color: #2d3440;
+        background-color: rgba(45, 52, 64, 0.5);
+        color: white;
         vertical-align: bottom;
         padding: 2 10 2 10;
         border-radius: 0 0 7 7;
